--- a/django_back/requirements.txt
+++ b/django_back/requirements.txt
@@ -1,3 +1,8 @@
 Django==5.0.1
 django_cron==0.6.0
 psycopg2==2.9.9
+geopy==2.4.1
+openmeteo_requests==1.2.0
+pandas==2.2.1
+requests_cache==1.2.0
+retry_requests==2.0.0
