--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+django_back/weather_api/migrations
 
+/.idea/learning_django_angular.iml
+/django_back/django_back/.cache.sqlite
+/django_back/.cache.sqlite
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
