--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,6 +17,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+      - name: Run tests
+        run: |
+          cd django_back
+          python manage.py test
           cd django_back
           pip install -r requirements.txt
       - name: Analysing the code with pylint
